syntax = "proto3";

package common;

import "protobuf_validation.proto";

// A Kik device ID. Device IDs should be generated on install and persist across the user resetting their account.
message XiDeviceId {
  // Should NOT be NONE
  DevicePrefix prefix = 1;
  enum DevicePrefix {
    NONE = 0;
    // Android
    CAN = 2;
  }

  // The UNPREFIXED device id.
  string id = 2 [(kik.validation.field_validation) = {
    mandatory: true
    regex: "^[a-f0-9]+$"
    min_byte_length: 8
    max_byte_length: 64}];
}

// The kik client version composed of major, minor, bugfix, build, and/or dev_build version numbers.
message XiClientVersion {
  uint32 major = 1 [(kik.validation.field_validation) = {min_val: 1}];
  uint32 minor = 2;
  uint32 bugfix = 3;

  string build = 4 [(kik.validation.field_validation) = {max_byte_length: 10}];
}

message XiLocale {
  string locale = 1 [(kik.validation.field_validation) = {
    // Follows toString() of java.util.Locale with only language and region
    // Example patterns: en, en_CA, en_029
    mandatory: true;
  }];
}

message XiBareUserJid {
    string local_part = 1;
}

message XiGroupJid {
    string local_part = 1 [(kik.validation.field_validation) = {
        mandatory: true;
    }];
}

message VerificationTokens {
    string integrity_token = 1 [(kik.validation.field_validation) = {
        mandatory: false
    }];
    string recaptcha_token = 2 [(kik.validation.field_validation) = {
        mandatory: false
    }];
    string access_token = 4 [(kik.validation.field_validation) = {
        mandatory: false
    }];
}

message UsernameCredentials {
    string username = 1 [(kik.validation.field_validation) = {
        mandatory: false
        min_byte_length: 1
        max_byte_length: 255
    }];
    string username_derived_passkey = 2 [(kik.validation.field_validation) = {
        min_byte_length: 32
        max_byte_length: 32
        mandatory: true
    }];
}
